# backend-girl

./: .dockerignore  .env  .gitignore  Dockerfile  PROJECT.md  docker-compose.yml  pyproject.toml  tech_doc_1.1.md  二维码上传接口建议.md  产品需求文档（PRD）.md  前端对接指南.md  后端接口拆解文档.md  小程序页面拆解文档（供AI生成UI代码）.md  影视和我的订阅的接口api.md  接口对照表.md  接口报错排查结果.md  数据表.json  给前段接口文档需求  运营策略自动化拆解文档.md  需求  需要压缩上传文件
.trae/: rules.md
api-manager/: testapi.py
app/: badges_config.py  config.py  database.py  dependencies.py  main.py
app/controllers/: __init__.py  ad_controller.py  admin_controller.py  anime_controller.py  badge_controller.py  config_controller.py  invite_controller.py  poster_controller.py  record_controller.py  stats_controller.py  user_controller.py
app/events/: __init__.py  base.py  event_bus.py  invite_event.py  record_event.py
app/jinshan-docs/: README_kdocs.md  fetch_kdocs.ps1  fetch_kdocs.py  kdocs_dismiss_login.js  kdocs_extract.js  (+1 more)
date/: 4K.json  影视剧.json  电影.json
test/: anime-test.py  api-test.py  api_poster_test.py  check_push_data.py  fix_push_data.py  fix_push_data2.py  flow-test.py  generate_complete_poster.py  get_user_token.py  import_real_data.py  migrate_admin.py  migrate_admin_v2.py  migrate_all.py  migrate_push.py  reset_and_import.py  reset_and_seed_anime_tables.py  run_push.py  seed_admin_defaults.py  seed_animes.py  seed_animes.sql  setup_anime_data.py  setup_push_test.py  test.py  test_all_templates.py  test_beautiful_posters.py  test_poster.py  test_pro_posters.py  test_title.py  unlock_all_features.py  update_invite_count.py  verify_imports.py
(+50 files in other folders)
