[project]
name = "girl-backend"
version = "1.0.0"
description = "微信小程序后端 - FastAPI + asyncpg"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10.4",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.1",
    "pillow>=10.0.0",
    "httpx>=0.28.1",
    "requests>=2.34.2",
    "DrissionPage>=4.1.1.2",
]

[dependency-groups]
dev = []

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
